--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,32 @@
     </style>
 
     <style name="Theme.RestaurantProject" parent="Base.Theme.RestaurantProject" />
+
+
+    <style name="TitleTextViewStyle">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+
+
+    <style name="ElevatedButtonStyle" parent="Widget.Material3.Button">
+        <item name="shapeAppearance">@style/ButtonShape</item>
+        <item name="android:elevation">8dp</item>
+        <item name="android:translationZ">4dp</item>
+        <item name="backgroundTint">#FF9800</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+
+    <style name="ButtonShape" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="cornerSize">5dp</item>
+    </style>
+
+    <style name="ButtonShapeDe" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="cornerSize">10dp</item>
+    </style>
+
+
 </resources>
