--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -22,7 +22,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:lineHeight="55dp"
-        android:text="Discover Your  Dream Job Here"
+        android:text="@string/discover_your_dream_job_here_auth_screen"
         android:textAlignment="center"
         android:textColor="#FF9800"
         android:textSize="35sp"
@@ -37,10 +37,11 @@
         android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Discover Your  Dream Job HereDiscover Your  Dream Job HereDiscover"
+        android:text="@string/discover_your_dream_job_here_discover_your_dream_job_herediscover_auth_screen"
         android:textAlignment="center"
         android:textColor="#4D4D4D"
         android:textSize="14sp"
+        android:lineHeight="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/discoverTv" />
@@ -52,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:padding="15dp"
-        android:text="Login"
+        android:text="@string/login_auth_screen"
         app:layout_constraintEnd_toStartOf="@+id/registerBt"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:padding="15dp"
-        android:text="Register"
+        android:text="@string/register_auth_screen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/loginBt"
