--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -13,10 +13,23 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="20dp"
+        android:layoutDirection="ltr"
         android:layout_marginTop="30dp"
         android:src="@drawable/ic_left_arrow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/forget_password_forget_password_screen"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/TitleTextViewStyle"
+        android:layout_marginTop="25dp"
+        android:textSize="25sp"
+        />
 
     <ImageView
         android:id="@+id/welcomeTvLogin"
@@ -60,7 +73,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
         android:background="#FFF5EA"
-        android:hint="New Password"
+        android:hint="@string/new_password_forget_password_screen"
         android:textColorHint="#525252"
         app:boxStrokeColor="#FF9800"
         app:boxStrokeWidth="0dp"
@@ -85,7 +98,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="40dp"
         android:padding="15dp"
-        android:text="Reset Password"
+        android:text="@string/reset_password_forget_password_screen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/newPasswordEtl" />
