--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Order # "
+                android:text="@string/order_tv_item_bill"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -58,14 +58,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="5dp"
-                android:text="2 / 8 / 2025"
+                android:text="@string/date_tv_item_bill"
                 android:textColor="#000000"
                 android:textSize="11sp"
                 app:layout_constraintBottom_toBottomOf="@+id/orderTv"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/orderTv" />
 
-            <com.emad.restaurantproject.CustomerScreens.NonScrollRecyclerView
+            <com.emad.restaurantproject.CustomerScreens.HomeScreens.NonScrollRecyclerView
                 android:id="@+id/orderItemsRv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 android:shadowRadius="3"
-                android:text="$"
+                android:text="@string/dollar_tv_item_bill"
                 android:textColor="#FF9800"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -99,7 +99,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
                 android:shadowRadius="3"
-                android:text="10.00"
+                android:text="@string/price_tv_item_bill"
                 android:textColor="#181818"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -111,12 +111,12 @@
                 style="@style/shadowText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginBottom="10dp"
                 android:shadowRadius="3"
-                android:text="Total Price : "
+                android:text="@string/total_price_tv_item_bill"
                 android:textColor="#181818"
                 android:textSize="18sp"
-                android:layout_marginStart="20dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
