--- a/app/src/main/res/drawable/arrow_right_24.xml
+++ b/app/src/main/res/drawable/arrow_right_24.xml
@@ -1,4 +1,10 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="24dp" android:tint="#FFFFFF" android:viewportHeight="960" android:viewportWidth="960" android:width="24dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:autoMirrored="true"
+    android:height="40dp"
+    android:tint="#FFFFFF"
+    android:viewportHeight="960"
+    android:viewportWidth="960"
+    android:width="40dp">
       
     <path android:fillColor="@android:color/white" android:pathData="M400,680L400,280L600,480L400,680Z"/>
     
