--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,6 +12,7 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginStart="20dp"
+        android:layoutDirection="ltr"
         android:layout_marginTop="30dp"
         android:src="@drawable/ic_left_arrow"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,10 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/sign_up_tv_register"
         android:textColor="#FF9800"
         android:textSize="50sp"
-        android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/arrowBackIv" />
 
@@ -144,6 +145,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="8dp"
             android:text="@string/already_have_an_account_tv_register"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -151,6 +153,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="4dp"
             android:text="@string/sign_in_tv_register"
             android:textColor="#FF9800"
             android:textStyle="bold" />
