--- a/app/src/main/res/layout/activity_update_menu_item.xml
+++ b/app/src/main/res/layout/activity_update_menu_item.xml
@@ -13,6 +13,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_margin="20dp"
+        android:layoutDirection="ltr"
         android:src="@drawable/ic_left_arrow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +22,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update Item"
+        android:text="@string/update_item_tv_update_item_screen"
         android:textColor="@color/black"
         android:textSize="26sp"
         android:textStyle="bold"
@@ -60,7 +61,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
         android:background="#FFF5EA"
-        android:hint="New name"
+        android:hint="@string/new_name_et_update_item_screen"
         android:textColorHint="#525252"
         app:boxStrokeColor="#FF9800"
         app:boxStrokeWidth="0dp"
@@ -85,7 +86,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:background="#FFF5EA"
-        android:hint="New price"
+        android:hint="@string/new_price_et_update_item_screen"
         android:textColorHint="#525252"
         app:boxStrokeColor="#FF9800"
         app:boxStrokeWidth="0dp"
@@ -109,7 +110,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:background="#FFF5EA"
-        android:hint="New calories"
+        android:hint="@string/new_calories_et_update_item_screen"
         android:textColorHint="#525252"
         app:boxStrokeColor="#FF9800"
         app:boxStrokeWidth="0dp"
@@ -133,7 +134,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:background="#FFF5EA"
-        android:hint="Description"
+        android:hint="@string/description_et_update_item_screen"
         android:textColorHint="#525252"
         app:boxStrokeColor="#FF9800"
         app:boxStrokeWidth="0dp"
@@ -168,7 +169,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="30dp"
         android:padding="15dp"
-        android:text="Update Item"
+        android:text="@string/update_item_bt_update_item_screen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/categorySp" />
