--- a/app/src/main/res/layout/fragment_live_cart.xml
+++ b/app/src/main/res/layout/fragment_live_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustomerScreens.LiveCartFragment">
+    tools:context=".CustomerScreens.CartScreens.LiveCartFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cartItemRv"
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:text="Total Price"
+                android:text="@string/total_price_tv_home_screen"
                 android:textColor="#A4A4A4"
                 android:textSize="15sp"
                 android:textStyle="bold"
@@ -47,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="$5000"
+                android:text="@string/total_price_home_screen"
                 android:textColor="@color/black"
                 android:textSize="30sp"
                 android:textStyle="bold"
@@ -61,8 +61,8 @@
                 android:layout_height="60dp"
                 android:layout_marginEnd="40dp"
                 android:drawableEnd="@drawable/arrow_right_24"
-                android:text="Checkout"
-                android:textSize="24sp"
+                android:text="@string/checkout_bt_home_screen"
+                android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
