--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Burger"
+        android:text="@string/burger_tv_item_category"
         android:textColor="@drawable/category_text_selector"
         android:textSize="10sp"
         android:textStyle="bold"
