--- a/app/src/main/res/layout/item_menu_item_owner.xml
+++ b/app/src/main/res/layout/item_menu_item_owner.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"
-                android:text="Pizza Marg"
+                android:text="@string/name_tv_item_owner"
                 android:textColor="#1D1D1D"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -53,7 +53,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:shadowColor="#FF9800"
-                android:text="🔥 88 Calories"
+                android:text="@string/calories_tv_item_owner"
                 android:textColor="#FF9800"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
                 android:shadowRadius="3"
-                android:text="$ 10.00"
+                android:text="@string/price_tv_item_owner"
                 android:textColor="#181818"
                 android:textSize="20sp"
                 android:textStyle="bold"
