--- a/app/src/main/res/layout/item_order_item_bill.xml
+++ b/app/src/main/res/layout/item_order_item_bill.xml
@@ -8,7 +8,7 @@
         android:id="@+id/nameItemTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chicken"
+        android:text="@string/name_tv_menu_item_bill"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
             android:id="@+id/quantityItemTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2 × "
+            android:text="@string/quantity_tv_menu_item_bill"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
             android:id="@+id/priceItemTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="30"
+            android:text="@string/price_tv_menu_item_bill"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:id="@+id/totalPriceItemTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="100.00"
+        android:text="@string/total_price_tv_menu_item_bill"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
