--- a/app/src/main/res/menu/customer_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/customer_bottom_navigation_menu.xml
@@ -4,20 +4,20 @@
     <item
         android:id="@+id/homeItem"
         android:icon="@drawable/ic_home_owner"
-        android:title="Home" />
+        android:title="@string/home_bottom_navigation_menu" />
 
     <item
         android:id="@+id/cartItem"
         android:icon="@drawable/cart"
-        android:title="Cart" />
+        android:title="@string/cart_bottom_navigation_menu" />
 
     <item
-        android:id="@+id/notificationsItem"
+        android:id="@+id/favoriteItem"
         android:icon="@drawable/favorite_heart"
-        android:title="Favorite" />
+        android:title="@string/favorite_bottom_navigation_menu" />
 
     <item
         android:id="@+id/profileItem"
         android:icon="@drawable/profile_about"
-        android:title="Profile" />
+        android:title="@string/profile_bottom_navigation_menu" />
 </menu>
